--- a/index.html
+++ b/index.html
@@ -8,27 +8,29 @@
         <script src="https://cdn.jsdelivr.net/gh/alfg/ping.js@0.2.2/dist/ping.min.js" type="text/javascript"></script>
     </head>
     <body style="background: dimgray;">
-        <script type="text/javascript">
-            var isLocalhost = true;
-            function getAddress(url, localUrl, https) {
-                return (https ? "https" : "http") + '\:\/\/' + (isLocalhost ? localUrl : 'box.faustvx.fr') + url;
-            }
-            console.log('ping 192.168.1.55');
-            new Ping({favicon:"/web/favicon.ico"}).ping("http://192.168.1.55:32400/web/index.html#", function (err, data) {
-                if (err) {
-                    isLocalhost = false;
+        <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP" class="removeOnLoaded" defer></script>
+
+        <script type="text/javascript" class="removeOnLoaded">
+            function createLocalDistantUrl(local, distant) {
+                distant = distant || local;
+                return function (url, isHttps) {
+                    var https = (isHttps ? 'https' : 'http');
+                    return (isLocal) => https + '://' + (isLocal ? local : distant) + url;
                 }
-                console.log('isLocalhost: ' + isLocalhost);
-                
-                console.log('createTabs');
-                var bar = createTabHeader(document.getElementsByTagName("body")[0]);
-                bar.insertTab('domoticz', getAddress(':90/#/Login', '192.168.1.55', false), 'Domoticz', true);
-                bar.insertTab('transmission', getAddress(':9091/transmission/web/', '192.168.1.55', false), 'Transmission');
-                bar.insertTab('plex', getAddress(':32400/web/index.html#', '192.168.1.55', false), 'Plex');
-                bar.insertTab('freebox', 'https\:\/\/box.faustvx.fr:6688', 'FreeBox');
-                bar.openDefault();
-                console.log('tabs created');
-            });
+            }
+            const _55 = createLocalDistantUrl('192.168.1.55', 'box.faustvx.fr');
+            const box = createLocalDistantUrl('box.faustvx.fr');
+
+            var bar = createTabHeader(document.getElementsByTagName("body")[0]);
+            bar.insertTab('domoticz', _55(':90/#/Login', false), 'Domoticz');
+            bar.insertTab('transmission', _55(':9091/transmission/web/', false), 'Transmission');
+            bar.insertTab('plex', _55(':32400/web/index.html#', false), 'Plex');
+            bar.insertTab('freebox', box(':6688/login.php', true), 'FreeBox');
+            
+            function getIP(json) {
+                bar.localhostCheckbox.checked = (json.ip === '78.204.134.16');
+                bar.start(true);
+            }
         </script>
     </body>
 </html>
