--- a/index.html
+++ b/index.html
@@ -5,32 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <link rel="icon" type="image/x-icon" href="favicon.ico">
         <script type="text/javascript" src="scripts/tabs.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/alfg/ping.js@0.2.2/dist/ping.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="scripts/index.js" defer></script>
+        <script type="text/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP" defer></script>
     </head>
     <body style="background: dimgray;">
-        <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP" class="removeOnLoaded" defer></script>
-
-        <script type="text/javascript" class="removeOnLoaded">
-            function createLocalDistantUrl(local, distant) {
-                distant = distant || local;
-                return function (url, isHttps) {
-                    var https = (isHttps ? 'https' : 'http');
-                    return (isLocal) => https + '://' + (isLocal ? local : distant) + url;
-                }
-            }
-            const _55 = createLocalDistantUrl('192.168.1.55', 'box.faustvx.fr');
-            const box = createLocalDistantUrl('box.faustvx.fr');
-
-            var bar = createTabHeader(document.getElementsByTagName("body")[0]);
-            bar.insertTab('domoticz', _55(':90/#/Login', false), 'Domoticz');
-            bar.insertTab('transmission', _55(':9091/transmission/web/', false), 'Transmission');
-            bar.insertTab('plex', _55(':32400/web/index.html#', false), 'Plex');
-            bar.insertTab('freebox', box(':6688/login.php', true), 'FreeBox');
-            
-            function getIP(json) {
-                bar.localhostCheckbox.checked = (json.ip === '78.204.134.16');
-                bar.start(true);
-            }
-        </script>
     </body>
 </html>
