Update index.js & index.html Added address.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	    <link rel="icon" type="image/x-icon" href="favicon.ico">
         <script type="text/javascript" src="scripts/tabs.js"></script>
         <script type="text/javascript" src="scripts/index.js" defer></script>
+        <script type="text/javascript" src="scripts/address.js" defer></script>
         <script type="text/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP" defer></script>
     </head>
     <body style="background: dimgray;">
