--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="scripts/tabs.js"></script>
         <script type="text/javascript" src="scripts/index.js" defer></script>
         <script type="text/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP" defer></script>
+        <script type="text/javascript" src="scripts/address.js" defer></script>
     </head>
     <body style="background: dimgray;">
     </body>
